[build-system]
requires = ["setuptools >= 61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hex_zmq_servers"
version = "0.3.15"
description = "HEXFELLOW ZMQ Servers"
readme = "README.md"
license = "Apache-2.0"
authors = [{ name = "Dong Zhaorui", email = "joray.dong@hexfellow.com" }]
maintainers = [
  { name = "jecjune", email = "zejun.chen@hexfellow.com" },
  { name = "Dong Zhaorui", email = "joray.dong@hexfellow.com" },
]
keywords = ["hex_zmq_servers"]
requires-python = ">=3.10"
dependencies = [
  "pyzmq>=27.0.1",
  "hex_device>=1.3.1,<1.4.0",
  "hex_robo_utils>=0.2.0,<0.3.0",
  "dynamixel-sdk==3.8.4",
  "opencv-python>=4.2",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: POSIX :: Linux",
]

[project.optional-dependencies]
berxel = ["berxel_py_wrapper>=2.0.182"]
realsense = ["pyrealsense2>=2.56.5.9235"]
mujoco = ["mujoco>=3.3.3"]
all = [
  "berxel_py_wrapper>=2.0.182",
  "mujoco>=3.3.3",
  "pyrealsense2>=2.56.5.9235",
]

[project.urls]
Homepage = "https://github.com/hexfellow/hex_zmq_servers"
Repository = "https://github.com/hexfellow/hex_zmq_servers.git"
"Bug Tracker" = "https://github.com/hexfellow/hex_zmq_servers/issues"
Documentation = "https://github.com/hexfellow/hex_zmq_servers/wiki"
